# ark-plonk

./: Cargo.toml  naf.sage  naf.sage.py
benches/: plonk.rs
examples/: BLAKE2s_circuit.rs  README.md  blake2s_circuit.rs  blake2s_circuit_fain2.rs  random_circuit.rs  range_circuit.rs  simple_circuit.rs  sudoku.rs  xor_fanin2.rs
html/: 404.html  chapter_1.html  chapter_2.html  chapter_3.html  print.html
plonk-core/: Cargo.toml
plonk-core/src/: circuit.rs  commitment.rs  prelude.rs  util.rs
plonk-core/src/constraint_system/: arithmetic.rs  boolean.rs  composer.rs  helper.rs  logic.rs  pedersen_hash.rs  range.rs
plonk-core/src/constraint_system/ecc/: mod.rs
plonk-core/src/constraint_system/ecc/curve_addition/: fixed_base_gate.rs  variable_base_gate.rs
plonk-core/src/constraint_system/ecc/scalar_mul/: fixed_base.rs  variable_base.rs
plonk-core/src/permutation/: mod.rs
plonk-core/src/proof_system/: linearisation_poly.rs  mod.rs  preprocess.rs  proof.rs  prover.rs  quotient_poly.rs  verifier.rs
plonk-core/src/proof_system/widget/: mod.rs
plonk-core/src/proof_system/widget/ecc/: curve_addition.rs  fixed_base_scalar_mul.rs
plonk-hashing/: Cargo.toml  README.md
plonk-hashing/src/poseidon/: constants.rs  lfsr.rs  matrix.rs  mds.rs  poseidon.rs  poseidon_ref.rs  preprocessing.rs  round_numbers.rs
plonk-hashing/src/poseidon/scripts/: README.md  generate_parameters_grain_deterministic.sage  generate_parameters_grain_deterministic.sage.py  poseidonperm_bls12_381_new_width3.sage  poseidonperm_bls12_381_new_width3.sage.py
src/: circuit.rs  main.rs
src/constraint_system/: arithmetic.rs  blinding_circuit.rs  helper.rs  mod.rs  receive_circuits.rs  signature_circuit.rs
src/constraint_system/ecc/scalar_mul/: blinding_circuit_test_vectors.py  fixed_base.rs
src/proof_system/: preprocess.rs  prover.rs  verifier.rs
