[package]
name = "plonk-hashing"
version = "0.8.2"
authors = ["ZK-GARAGE Authors"]
readme = "README.md"
repository = "https://github.com/zk-garage/plonk"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
categories = ["algorithms", "cryptography", "science"]
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm."
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[features]
# Enable Standard Library
std = []

[dependencies]
plonk-core = { path = "../plonk-core", features = ["trace"]}
ark-serialize = { git="https://github.com/simonmasson/algebra", rev="e2ea75c" }
ark-ff = { git="https://github.com/simonmasson/algebra", rev="e2ea75c" }
ark-ec = { git="https://github.com/simonmasson/algebra", rev="e2ea75c" }
thiserror = "1.0.30"
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }

[dev-dependencies]
ark-bls12-377 = { git="https://github.com/simonmasson/curves/", branch="new-pairing-layer" }
ark-ed-on-bls12-377 = { git="https://github.com/simonmasson/curves/", branch="new-pairing-layer" }
ark-bls12-381-new = { git="https://github.com/simonmasson/curves/", branch="new-pairing-layer" }
ark-ed-on-bls12-381-new = { git="https://github.com/simonmasson/curves/", branch="new-pairing-layer" }
ark-std = "0.3"

[patch.crates-io]
ark-serialize = { git="https://github.com/simonmasson/algebra", rev="e2ea75c" }
ark-ff = { git="https://github.com/simonmasson/algebra", rev="e2ea75c" }
ark-ec = { git="https://github.com/simonmasson/algebra", rev="e2ea75c" }
ark-std = { git = "https://github.com/arkworks-rs/std/", rev = "2b3568f" }